# DbSketch

./: .travis.yml  CMakeLists.txt  DbSketch.pro  README.md
sketchlib/: CMakeLists.txt  basecontainer.h  containerfactory.h  layer.h  sketchfile.h  sketchlib.pro  sketchlib_global.h
sketchlib/container/: artboard.h  assetcollection.h  bitmap.h  blur.h  border.h  borderoptions.h  color.h  document.h  exportformat.h  exportoptions.h  fill.h  gradient.h  gradientstop.h  graphicscontextsettings.h  group.h  imagecollection.h  innershadow.h  msimmutableforeignsymbol.h  msjsonfilereference.h  oval.h  page.h  polygon.h  rect.h  rectangle.h  rulerdata.h  shadow.h  shapegroup.h  shapepath.h  sharedstyle.h  sharedstylecontainer.h  sharedtextstylecontainer.h  slice.h  style.h  symbolcontainer.h  symbolinstance.h  symbolmaster.h  text.h  textstyle.h  triangle.h
sketchviewer/: CMakeLists.txt  sketchviewer.pro
